--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+---
 name: CI
 
 on:
@@ -10,24 +11,32 @@ permissions:
   contents: read
 
 jobs:
-  validate:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install lint dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y shellcheck
+          sudo apt-get install -y shellcheck shfmt yamllint
 
-      - name: Validate repository
-        run: bash tools/ci/validate.sh
+      - name: Run lint checks
+        run: bash tools/ci/lint.sh
 
-      - name: Package smoke test
+  test:
+    runs-on: ubuntu-latest
+    needs:
+      - lint
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Run test suite
         run: |
           version="ci-${GITHUB_SHA::7}"
-          bash tools/release/package.sh "$version"
+          bash tools/ci/test.sh "$version"
 
       - name: Upload package artifact
         uses: actions/upload-artifact@v4
